--- a/front/react/public/index.html
+++ b/front/react/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
     <title>React App</title>
   </head>
   <body>
